# MNMGDatalog

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  binary_file_utils.py  cc-merged.sh  cc.cu  cc.json  cc.py  edit.md  experiments.md  generate_graphs.py  gpu_comm.cu  merged-job.sh  parse_results.py  polaris-job-semi-cpu.sh  polaris-job-semi.sh  polaris-job.sh  polaris-results-multiple.md  polaris-results.md  polaris_debug.md  power.py  power.sh  power_log.csv  power_time.py  semi-merged-results.md  semi-merged.sh  set_affinity_gpu_polaris.sh  set_affinity_gpu_polaris_semi.sh  sg-merged-medium.sh  sg-merged-new.sh  sg-merged-results-original.md  sg-merged-results.md  sg-merged-small-2.sh  sg-merged.sh  sg.cu  sg.json  single-join-large.sh  single-join-medium.sh  (+25 more)
common/: comm.cu  hash_table.cu  join.cu  kernels.cu  parallel_io.cu  timestamp_util.h  utils.cu
data/: cc_process.txt  data_10.txt  data_5_TC.txt  data_cc.txt  dummy_TC.txt  paper.txt  quiz3.txt  tc_paper.txt
drawing/: FIGURE1.drawio  cam_sort.md  cam_two_pass.md  cc_example.drawio  cc_iteration_new.drawio  cc_iterations.pptx  comm.drawio  cuda_aware_mpi.csv  cuda_aware_mpi_sort.csv  cuda_aware_mpi_two_pass.csv  data-communication-flow.mermaid  data_distribution.drawio  flowchart.xml  flowchart_cc.xml  flowchart_sg.xml  mpi_cpu_sort.md  mpi_cpu_two_pass.md  sg_cam_sort.md  sg_cam_two_pass.md  sg_traditional_sort.md  sg_traditional_two_pass.md  tc_cam_sort.md  tc_cam_two_pass.md  tc_traditional_sort.md  tc_traditional_two_pass.md  traditional_sort.md  traditional_two_pass.md
include/: utils.cuh  (+2 more)
(+111 files in other folders)
